@@ -67,6 +67,7 @@
     <ClCompile Include="..\smartd.cpp" />
     <ClCompile Include="..\utility.cpp" />
     <ClCompile Include="..\ataidentify.cpp" />
+    <ClCompile Include="..\dev_areca.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="daemon_win32.h">
@@ -106,6 +107,7 @@
       <Filter>os_win32</Filter>
     </ClInclude>
     <ClInclude Include="..\ataidentify.h" />
+    <ClInclude Include="..\dev_areca.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="installer.nsi">
